[gd_scene load_steps=23 format=3 uid="uid://du3dh6rb24kyv"]

[ext_resource type="Script" path="res://Scripts/Items/Grimoire.gd" id="1_jtc6x"]
[ext_resource type="Script" path="res://Scripts/Items/ClickableReadable.gd" id="1_oqghv"]
[ext_resource type="Texture2D" uid="uid://bloe6d1xqx85c" path="res://Assets/2D/Books/Grimoire/Grimoire_02.png" id="2_71p6i"]
[ext_resource type="Texture2D" uid="uid://cglb3g30rrg3x" path="res://Assets/2D/Decals/book_texture.jpg" id="2_j2g35"]
[ext_resource type="Texture2D" uid="uid://cyphi1jdwbrhn" path="res://Assets/2D/Books/Grimoire/Grimoire_03.png" id="3_7qp6e"]
[ext_resource type="Texture2D" uid="uid://sntw8ewqgxsi" path="res://Assets/2D/Decals/old_paper.jpg" id="3_64ywr"]
[ext_resource type="Texture2D" uid="uid://cau3pwauawe6" path="res://Assets/2D/Books/Grimoire_COVER.png" id="3_aqkud"]
[ext_resource type="Texture2D" uid="uid://c14o5yxbbm8e" path="res://Assets/2D/Books/Grimoire/Grimoire_04.png" id="4_tggbi"]
[ext_resource type="Texture2D" uid="uid://dbu10ff5c0srq" path="res://Assets/2D/BLANK.png" id="5_8scjq"]
[ext_resource type="Texture2D" uid="uid://drpfr21ima3q7" path="res://Assets/2D/Books/Grimoire/Grimoire_05.png" id="5_gipp4"]
[ext_resource type="Texture2D" uid="uid://d4cb56gmbrm8" path="res://Assets/2D/Books/Grimoire/Grimoire_06.png" id="6_d0dvm"]
[ext_resource type="Texture2D" uid="uid://bkeheuao5nskx" path="res://Assets/2D/Books/Grimoire/Grimoire_07.png" id="7_lge0k"]
[ext_resource type="Texture2D" uid="uid://cl8cqlv2s00nd" path="res://Assets/2D/Books/Grimoire/Grimoire_08.png" id="8_1qtyr"]
[ext_resource type="Texture2D" uid="uid://clx7m62x13n3m" path="res://Assets/2D/Books/Grimoire/Grimoire_09.png" id="9_j3s58"]

[sub_resource type="BoxMesh" id="BoxMesh_lqut7"]
size = Vector3(0.14, 0.01, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2l2db"]
albedo_color = Color(0.34902, 0.219608, 0.0235294, 1)
albedo_texture = ExtResource("2_j2g35")
roughness = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_btvvn"]
size = Vector3(0.7, 0.01, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_da6ug"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.635294, 0.635294, 0.635294, 1)
albedo_texture = ExtResource("3_64ywr")

[sub_resource type="Animation" id="Animation_wb4b5"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/L:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.0066936, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/L:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.114961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/L:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5.02509e-09, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/L:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(8.6473e-08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/L:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-9.06273e-09, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/L:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2.93275, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Stipite:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.00242621, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Stipite:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.0615681, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Stipite:position:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2.69123e-09, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Body/Stipite:rotation:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(4.39014e-08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Body/Stipite:rotation:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-4.3711e-08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Body/Stipite:rotation:z")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.57514, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Body/R/Cover2Pivot/Cover2:position:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.310865, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Body/R/Cover2Pivot/Cover2:position:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.12222, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Body/R/Cover2Pivot/Cover2:position:z")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-4.94185e-06, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_bwy7l"]
resource_name = "close"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/L:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-7.65026e-18, -0.25, 0, 0.25, 0, -0.0066936, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/L:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.017903, -0.25, 0, 0.25, 0, 0.114961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/L:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(7.82564e-10, -0.25, 0, 0.25, 0, 5.02509e-09, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/L:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(8.21992e-10, -0.25, 0, 0.25, 0, 8.6473e-08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/L:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(8.43711e-09, -0.25, 0, 0.25, 0, -9.06273e-09, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/L:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-0.194238, -0.25, 0, 0.25, 0, 2.93275, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Stipite:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.00242621, -0.25, 0, 0.25, 0, 0.00242621, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Stipite:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.000209751, -0.25, 0, 0.25, 0, 0.0615681, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Stipite:position:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(9.16777e-12, -0.25, 0, 0.25, 0, 2.69123e-09, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Body/Stipite:rotation:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(8.89296e-13, -0.25, 0, 0.25, 0, 4.39014e-08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Body/Stipite:rotation:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2.7846e-10, -0.25, 0, 0.25, 0, -4.3711e-08, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Body/Stipite:rotation:z")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-0.00637045, -0.25, 0, 0.25, 0, 1.57514, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Body/R/Cover2Pivot/Cover2:position:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.310865, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Body/R/Cover2Pivot/Cover2:position:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.12222, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Body/R/Cover2Pivot/Cover2:position:z")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-4.94185e-06, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1)
}

[sub_resource type="Animation" id="Animation_6uabh"]
resource_name = "open"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/L:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-0.0066936, -0.25, 0, 0.25, 0, -7.65026e-18, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/L:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.114961, -0.25, 0, 0.25, 0, 0.017903, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/L:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5.02509e-09, -0.25, 0, 0.25, 0, 7.82564e-10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/L:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(8.6473e-08, -0.25, 0, 0.25, 0, 8.21992e-10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/L:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-9.06273e-09, -0.25, 0, 0.25, 0, 8.43711e-09, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/L:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2.93275, -0.25, 0, 0.25, 0, -0.194238, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Stipite:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.00242621, -0.25, 0, 0.25, 0, 0.00242621, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Stipite:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.0615681, -0.25, 0, 0.25, 0, 0.000209751, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Stipite:position:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2.69123e-09, -0.25, 0, 0.25, 0, 9.16777e-12, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Body/Stipite:rotation:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(4.39014e-08, -0.25, 0, 0.25, 0, 8.89296e-13, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Body/Stipite:rotation:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-4.3711e-08, -0.25, 0, 0.25, 0, 2.7846e-10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Body/Stipite:rotation:z")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.57514, -0.25, 0, 0.25, 0, -0.00637045, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Body/R/Cover2Pivot/Cover2:position:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.310865, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Body/R/Cover2Pivot/Cover2:position:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.12222, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Body/R/Cover2Pivot/Cover2:position:z")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-4.94185e-06, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ilf0c"]
_data = {
"RESET": SubResource("Animation_wb4b5"),
"close": SubResource("Animation_bwy7l"),
"open": SubResource("Animation_6uabh")
}

[node name="Grimoire" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_jtc6x")
pages = Array[Texture2D]([ExtResource("2_71p6i"), ExtResource("3_7qp6e"), ExtResource("4_tggbi"), ExtResource("5_gipp4"), ExtResource("6_d0dvm"), ExtResource("7_lge0k"), ExtResource("8_1qtyr"), ExtResource("9_j3s58")])

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.217045, 9.48733e-09)
light_color = Color(0.513726, 0.376471, 0.168627, 1)
light_energy = 2.25
omni_range = 1.0
omni_attenuation = 0.176777

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(1, 4.27318e-16, -8.88178e-16, -4.27318e-16, 1, 0, 8.88178e-16, 0, 1, 0, 0, 0)

[node name="Stipite" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-0.00434366, -0.999991, -4.3711e-08, 0.999991, -0.00434366, -4.39014e-08, 4.37111e-08, -4.39013e-08, 1, 0.00242621, 0.0615681, 2.69123e-09)
mesh = SubResource("BoxMesh_lqut7")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2l2db")

[node name="L" type="Node3D" parent="Body"]
transform = Transform3D(-0.978272, -0.207328, -9.06273e-09, 0.207328, -0.978272, -8.6473e-08, 9.06245e-09, -8.64731e-08, 1, -0.0066936, 0.114961, 5.02509e-09)

[node name="CoverImage" type="Sprite3D" parent="Body/L"]
transform = Transform3D(0.0264012, 1.17174e-10, 0.00565463, 0.00565463, -3.45803e-10, -0.0264012, -4.21544e-11, 0.027, -3.62674e-10, 0.332668, 0.0436673, -0.0122266)
flip_h = true
modulate = Color(0.615686, 0.615686, 0.615686, 1)
texture = ExtResource("3_aqkud")

[node name="Cover1Pivot" type="Node3D" parent="Body/L"]
transform = Transform3D(0.203423, 0.979091, 4.27975e-08, -0.979091, 0.203423, -3.48197e-08, -4.27976e-08, -3.48195e-08, 1, 0.0947679, 0.0632186, 2.76338e-09)

[node name="Cover1" type="MeshInstance3D" parent="Body/L/Cover1Pivot"]
transform = Transform3D(-0.00452044, -0.99999, -4.3711e-08, 0.99999, -0.00452044, -4.3909e-08, 4.3711e-08, -4.3909e-08, 1, 0.0602384, 0.241738, 1.05667e-08)
mesh = SubResource("BoxMesh_btvvn")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2l2db")

[node name="Pages2Pivot" type="Node3D" parent="Body/L"]
transform = Transform3D(0.996768, 0.0803381, 3.51169e-09, -0.0803381, 0.996768, -1.41299e-10, -3.51169e-09, -1.41288e-10, 1, -0.0204711, -0.00636955, -2.78422e-10)

[node name="Pages2" type="CSGBox3D" parent="Body/L/Pages2Pivot"]
transform = Transform3D(0.957415, -0.288714, 4.185e-08, 0.288714, 0.957415, -3.10913e-08, -3.10912e-08, 4.18499e-08, 1, 0.338784, 0.121266, -0.00131225)
material_override = SubResource("StandardMaterial3D_da6ug")
collision_layer = 64
size = Vector3(0.681, 0.06, 0.959)

[node name="Left" type="Sprite3D" parent="Body/L/Pages2Pivot"]
transform = Transform3D(0.0258616, 4.97603e-11, 0.00775737, 0.00775737, -3.39086e-10, -0.0258616, 4.97603e-11, 0.027, -3.39086e-10, 0.325177, 0.154857, -0.0122266)
flip_h = true
texture = ExtResource("5_8scjq")

[node name="R" type="Node3D" parent="Body"]
transform = Transform3D(0.97022, -0.242227, -1.05881e-08, 0.242227, 0.97022, -1.30174e-09, 1.05881e-08, -1.30174e-09, 1, 0.00197497, 0.0127118, 5.55649e-10)

[node name="Cover2Pivot" type="Node3D" parent="Body/R"]
transform = Transform3D(0.976488, -0.215571, -9.42288e-09, 0.215571, 0.976488, -1.02773e-09, 9.42289e-09, -1.02773e-09, 1, -0.0182057, 0.0115185, 5.03491e-10)

[node name="Cover2" type="MeshInstance3D" parent="Body/R/Cover2Pivot"]
transform = Transform3D(0.904185, 0.427137, -3.95233e-08, -0.427137, 0.904185, -2.50406e-08, 2.50406e-08, 3.95232e-08, 1, -0.310865, 0.12222, -4.94185e-06)
mesh = SubResource("BoxMesh_btvvn")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2l2db")

[node name="PagesPivot" type="Node3D" parent="Body/R"]
transform = Transform3D(0.976281, -0.216508, -9.46385e-09, 0.216508, 0.976281, -1.03681e-09, 9.46385e-09, -1.0368e-09, 1, 0.0200598, -0.00857663, -3.74896e-10)

[node name="Pages" type="CSGBox3D" parent="Body/R/PagesPivot"]
transform = Transform3D(0.895906, 0.444244, -3.91613e-08, -0.444244, 0.895906, -2.42929e-08, 2.42929e-08, 3.91613e-08, 1, -0.318531, 0.184083, -0.00131225)
material_override = SubResource("StandardMaterial3D_da6ug")
size = Vector3(0.681, 0.065, 0.959)

[node name="Right" type="Sprite3D" parent="Body/R/PagesPivot"]
transform = Transform3D(0.0242035, -1.2224e-10, -0.0119663, -0.0119663, -5.23064e-10, -0.0242035, -1.2224e-10, 0.027, -5.23064e-10, -0.298608, 0.213048, -0.0122266)
flip_h = true
texture = ExtResource("5_8scjq")

[node name="OpenCollider" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.355621, 0.0641479, -0.00244141)
visible = false
use_collision = true
collision_layer = 64
size = Vector3(0.727112, 0.16272, 1.00488)
script = ExtResource("1_oqghv")

[node name="LeftCollider" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.333971, 0.0278014, -0.000183467)
visible = false
use_collision = true
collision_layer = 64
size = Vector3(0.681915, 0.090027, 0.958617)
script = ExtResource("1_oqghv")

[node name="RightCollider" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.352465, 0.0277556, 0.000244494)
visible = false
use_collision = true
collision_layer = 64
size = Vector3(0.654572, 0.0899354, 0.923339)
script = ExtResource("1_oqghv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ilf0c")
}

[connection signal="has_been_clicked" from="OpenCollider" to="." method="_on_open_collider_has_been_clicked"]
[connection signal="has_been_clicked" from="LeftCollider" to="." method="_on_left_collider_has_been_clicked"]
[connection signal="has_been_clicked" from="RightCollider" to="." method="_on_right_collider_has_been_clicked"]
